<resources>
    <!--STRINGS DIE NIET IN ANDERE TAAL HOEVEN-->
    <string name="app_name">Breda</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_button_handler">ButtonHandler</string>
    <string name="email">Email</string>
    <string name="nederlands">Nederlands</string>
    <string name="engels">English</string>
    <string name="taalInGebruikNL">Applicatie maakt al gebruik van deze taal</string>
    <string name="taalInGebruikEN">Application is already using this language</string>


    <!--STRINGS DIE VERTAALD WORDEN-->
    <string name="action_settings">Instellingen</string>
    <string name="locatie">Locatie</string>
    <string name="locatieTab2">Locatie:</string>
    <string name="locatieWijzigen">Locatie wijzigen</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="beschrijving2">Beschrijving van de melding:</string>
    <string name="beschrijvingHint">Beschrijf uw probleem</string>
    <string name="instellingen">Instellingen</string>
    <string name="over">Over</string>
    <string name="taal">Taal</string>
    <string name="zoekafstand">Zoekafstand</string>
    <string name="profiel">Profiel</string>
    <string name="status">Status:</string>

    <string name="optioneel">Optioneel</string>
    <string name="emailHint">Vul hier uw email adres in</string>
    <string name="voornaam">Voornaam</string>
    <string name="voornaamHint">Vul hier uw voornaam in</string>
    <string name="achternaam">Achternaam</string>
    <string name="achternaamHint">Vul hier uw achternaam in</string>
    <string name="foto">Foto toevoegen</string>
    <string name="info">Optioneel: U bent niet verplicht om dit in te vullen, dit maakt het wel makkelijker om u op de hoogte te kunnen stellen van veranderingen.</string>
    <string name="terug">Terug</string>
    <string name="meldingplaatsen">Plaats melding</string>
    <string name="meldingplaatsen2">Plaats</string>
    <string name="mijnMeldingen">Mijn meldingen</string>
    <string name="onthoudGegevens">Onthoud mijn persoonlijke gegevens</string>

    <string name="hoofdcategorieTab2">Hoofdcategorie*</string>
    <string name="kiesProblemen">Kies een hoofdcategorie</string>
    <string name="subcategorieTab2">Subcategorie*</string>
    <string name="kiesSubProblemen">Kies een subcategorie</string>
    <string name="update">Houd mij NIET op de hoogte via email</string>
    <string name="laatsteupdateTab2">Laatste update:</string>

    <string name="kiesSubCategory">Selecteer eerst een subcategorie.</string>
    <string name="geenLocatie">Geen locatie gevonden. Kies een locatie.</string>
    <string name="eContactGegevens">Uw email is vereist om direct updates te kunnen ontvangen</string>
    <string name="onjuistEmail">Geef een bestaand email adres op</string>
    <string name="geenBeschrijving">Voeg een beschrijving toe</string>
    <string name="kBeschrijving">Beschrijving moet minimaal 10 karakters bevatten</string>
    <string name="ePostRequest">Kan melding niet versturen. Verbind uw apparaat met het internet en probeer opnieuw.</string>
    <string name="eGetServices">Geen services kunnen vinden die voldoen aan deze criteria</string>
    <string name="FoutOphalenProblemen">Categorieën konden niet bijgewerkt worden.</string>
    <string name="errLoadingServiceRequestList">Kan op dit moment geen meldingen ophalen. Locatie niet bekend.</string>
    <string name="eFindLocationTitle">Locatie bepalen mislukt</string>
    <string name="eFindLocation">Het is niet gelukt uw huidige locatie te bepalen. Mogelijk staat locatievoorziening uit of is er geen internetverbinding. Probeer het later opnieuw.</string>

    <string name="fotoWijzigen">Foto wijzigen</string>
    <string name="fotoMaken">Maak foto</string>
    <string name="fotoKiezen">Kies foto uit galerij</string>
    <string name="activityMain_item_filters">Filters</string>
    <string name="activityMain_item_gps">Locatie</string>
    <string name="activityMain_item_report">Melding</string>


    <string name="soortgelijkeMeldingen">Soortgelijke meldingen op deze locatie</string>
    <string name="categorieën">Categorieën</string>
    <string name="activityMain_saved_radius">SAVED_RADIUS</string>
    <string name="radiusMeters">meter</string>
    <string name="geenFilter">Geen filter</string>
    <string name="activityMain_saved_category">SAVED_CAT</string>
    <string name="activityMain_saved_servcodeQ">SAVED_SERVICE_CODES</string>

    <string name="verwijderGegevens">Verwijder persoonlijke gegevens</string>
    <string name="gegevensVerwijderd">Persoonlijke gegevens succesvol verwijderd</string>
    <string name="noConnection">Het is niet gelukt om met het internet te verbinden. Probeer later opnieuw</string>
    <string name="filters_opslaan">Opslaan</string>
    <string name="eFineLocationPermissionExplain">Zonder deze permissie kan de app uw locatie niet vinden. U wordt dan niet naar uw eigen locatie gebracht op de kaart. Weet u zeker dat u deze permissie niet toe wilt staan?</string>
    <string name="eRetry">OPNIEUW PROBEREN</string>
    <string name="eImSure">JA</string>
    <string name="reportUpdated">meldingen zijn geüpdatet</string>
    <string name="detailedStatus">Gedetailleerde status</string>
    <string name="activityDetailedMelding_bt_upvoten">Prioriteit geven</string>
    <string name="activityDetailedMelding_bt_follow">Volgen</string>
    <string name="numberOfUpvotes">Aantal upvotes:</string>
    <string name="upvoteSucces">Succes! De melding is geüpvotet!</string>
    <string name="saved_upvote">savedUpvote</string>
    <string name="sharedPreference_upvote">upvotes</string>
    <string name="alreadyUpvoted">Je hebt deze melding al een keer geüpvotet!</string>
    <string name="activityMapsDialog_tv_assureLocation">Wil je deze gekozen locatie gebruiken?</string>
    <string name="activityMaps_tv_selectLocationHelp">Selecteer een locatie door op de kaart te klikken</string>
    <string name="title_activity_stepper">StepperActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nietGeselecteerdeCategorie">Start door naar links te swipen</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="catagory">Categorie</string>
    <string name="request">Melding</string>
    <string name="servicesLoaded">Catagorieën zijn bijgewerkt</string>
    <string name="loading">Laden...</string>
    <string name="Retry">Opnieuw proberen</string>
    <string name="SelectSubCatagory">Selecteer een subcategory!</string>
    <string name="chooseMainCatagory">Kies eerst een hoofdcategorie</string>
    <string name="explanationNoCategories">De eerste keer dat u deze app gebruikt, is er toegang tot het internet nodig om categorieën voor u in te laden. Na de eerste keer is dit niet meer nodig</string>
    <string name="OK">OK</string>
    <string name="errLoadingMap">Kaart kon niet geladen worden.</string>
    <string name="selectLocation">Selecteer eerst een locatie voor uw melding door verder in te zoomen</string>
    <string name="createOrFollowRequest">Kies een locatie voor je melding of volg een melding</string>
    <string name="chooseLocation">Kies locatie</string>
    <string name="clickOnMap">Klik op de kaart om een locatie te kiezen</string>
    <string name="clickNext">Locatie is gekozen. Klik op next.</string>

</resources>