<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activityMelding_tv_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round"
            android:padding="8dp"
            android:text="@string/locatie"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activityMelding_btn_wijzigLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="#FF6FDA7F"
            android:drawableLeft="@drawable/changelocation"
            android:text="@string/locatieWijzigen"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="21sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@mipmap/spinner" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".28"
            android:background="@drawable/spinner"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"

                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@mipmap/spinner" />

        </RelativeLayout>

        <TextView
            android:id="@+id/beschrijvingtextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/beschrijving"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activityMelding_tv_beschrijving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/beschrijvingHint"
            android:inputType="textMultiLine"
            android:nextFocusLeft="@id/activityMelding_tv_beschrijving"
            android:nextFocusUp="@id/activityMelding_tv_beschrijving"
            android:padding="8dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activityMelding_btn_fotoButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6FDA7F"
                android:drawableLeft="@drawable/addphoto"
                android:text="@string/foto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activityMelding_IV_fotoImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/imageicon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activityMelding_tv_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/background_light"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activityMelding_tv_Optioneel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/optioneel"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activityMelding_tv_voorNaam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/voornaam"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/optioneel"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/voornaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round"
            android:ems="10"
            android:hint="@string/voornaamHint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activityMelding_tv_achterNaam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/achternaam"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/optioneel"
                android:textAlignment="textEnd"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/achternaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round"
            android:hint="@string/achternaamHint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/activityMelding_cb_onthoudCheckbox"
            android:theme="@style/checkBoxStyle"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/background_light"
            android:text="@string/onthoudGegevens"
            android:textColor="@android:color/white"
            android:textColorLink="#FF6FDA7F" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/background_light"
            android:text="@string/info" />

        <CheckBox
            android:id="@+id/activityMelding_cb_updateCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/background_light"
            android:buttonTint="@android:color/background_light"
            android:layout_marginTop="10dp"
            android:text="@string/update"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/terugButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6FDA7F"
                android:text="@string/terug"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plaatsButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6FDA7F"
                android:text="@string/meldingplaatsen"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
