<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grijs"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/alertdialog_tv_profiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/profiel"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/alertdialog_btn_mijnmeldingen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF6FDA7F"
        android:text="@string/mijnMeldingen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_below="@+id/alertdialog_tv_profiel"
        android:layout_alignLeft="@+id/alertdialog_btn_instellingen"
        android:layout_alignStart="@+id/alertdialog_btn_instellingen" />

    <Button
        android:id="@+id/alertdialog_btn_instellingen"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alertdialog_btn_mijnmeldingen"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FF6FDA7F"
        android:text="@string/instellingen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="21sp"
        android:textStyle="bold" />

</RelativeLayout>