<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2"
    android:foreground="@drawable/imageborder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_melding_dialog_tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF6FDA7F"
            android:text="@string/soortgelijkeMeldingen"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/activity_melding_dialog_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                android:dividerHeight="20.0sp"/>

         </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/activity_melding_dialog_btn_terug"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6FDA7F"
                android:text="@string/terug"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_melding_dialog_btn_maakMelding"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#FF6FDA7F"
                android:text="@string/meldingplaatsen2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
