<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grijs"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/alertdialog_tv_profiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profiel"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/alertdialog_btn_mijnmeldingen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF6FDA7F"
        android:text="@string/mijnMeldingen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_below="@+id/alertdialog_tv_profiel"
        android:layout_alignLeft="@+id/alertdialog_btn_instellingen"
        android:layout_alignStart="@+id/alertdialog_btn_instellingen"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/alertdialog_tv_profiel"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/alertdialog_btn_instellingen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alertdialog_btn_mijnmeldingen"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FF6FDA7F"
        android:text="@string/instellingen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="21sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/alertdialog_btn_mijnmeldingen"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>